chore: fix usage of deprecated methods
Fixes #31